CS-322 Fix text overflow

--- a/src/styles/components/businesses/map.css
+++ b/src/styles/components/businesses/map.css
@@ -111,7 +111,10 @@
   margin-left: 0;
   width: 100%;
 }
+.map .btn-link {
+  padding-right: 0;
 
+}
 .float-right {
   float: right;
 }
