--- a/src/styles/layout/_search-nav.scss
+++ b/src/styles/layout/_search-nav.scss
@@ -24,7 +24,7 @@
     }
     .search-by-text {
       display: inline-block;
-      width: 244px;
+      width: 87%;
       transition: all 0.2s ease-in;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -62,6 +62,7 @@
       }
       @media (max-width: 60em) {
         padding: 10px 0;
+        width: 140px;
       }
     }
     .dropdown-btn {
